--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Contact</h1>
+<h1>About us</h1>
 <p>This is the home page for the <a href="http://railstutorial.org/"></a> sample application.</p>
