Added a title helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	
-	<title>Ruby on Rails Tutoria Sample Apps | <%= @title%></title>
+	<title><%=title%></title>
 	<%= csrf_meta_tag %>
 	</head>
 	<body>
